# SECDA-TFLite

./: .gitignore  .gitmodules  LICENSE.md  README.md  SECDA-TFLite.code-workspace  SECDA-TFLite_v1.2_devC.code-workspace  SECDA-TFLitev_v1.2.code-workspace  WORKSPACE  build-docker.sh  config.json  requirements.txt  start-docker.sh
.deprecated/: build-docker.sh  start-docker.sh
.deprecated/docker/: Dockerfile
.devcontainer/: Dockerfile  config.json  devcontainer.json  requirements.txt
acc_testing/: CMakeLists.txt  secda_tflite
acc_testing/CMakeModules/: FindSYSC.cmake
acc_testing/mm_v4/: CMakeLists.txt  acc.sc.cc  acc.sc.h  hw_modules.sc.h
acc_testing/mm_v4/driver/: CMakeLists.txt  acc_container.h  mm_driver.cc  mm_man_v4_As.h  mm_man_v4_Bs.h  mm_man_v4_Cs.h  mm_man_v4_Ns.h  systemc_binding.h
acc_testing/toy_add/: CMakeLists.txt  acc.sc.h  compute.sc.h
acc_testing/toy_add/driver/: CMakeLists.txt  acc_container.h  add_driver.cc  systemc_binding.h
data/models/: add_simple.tflite  dcgan_disc.tflite  dcgan_gen.tflite  mobilenetv2.tflite
docker/: Dockerfile
docs/: config.md  fpga_support.md  kria_setup.md  old_doc.md  vivado_install.md  vscode.md
hardware_automation/: gen.tpl.sh  hw_automation.ipynb  hw_gen.py  hw_gen.tpl.sh  readme.md  run_template.sh  vivado_hls_tcl_script_gen.ipynb  vm_hlx.tcl
hardware_automation/configs/: ADDv1_0.json  MM2IMv1_0.json  MM2IMv2_0.json  MM2IMv2_1.json  MM2IMv2_2.json  MM2IMv2_3.json  MM2IMv2_4.json  SAv3_0.json  VMv2_0.json  VMv3_0.json  VMv3_1.json  VMv3_2.json  VMv3_3.json  VMv4_0.json
hardware_automation/hlx_scripts/: mdma_axilite_hlx_250.tcl  mdma_axilite_hlx_reconfig_1.tcl  mdma_axilite_hlx_reconfig_1_full.tcl  mdma_axilite_hlx_reconfig_1_x180.tcl  mdma_axilite_hlx_reconfig_2.tcl  mdma_axilite_hlx_reconfig_2_x180.tcl  mdma_axilite_hlx_reconfig_3.tcl  mdma_axilite_hlx_reconfig_3_x180.tcl  mdma_axilite_hlx_reconfig_4.tcl  mdma_axilite_hlx_reconfig_4_kria.tcl  mdma_axilite_hlx_reconfig_4_kria_hwc.tcl  mdma_axilite_hlx_reconfig_4_x180.tcl  mdma_axilite_hlx_reconfig_4_xfull.tcl  mdma_axilite_hlx_reconfig_4_xfull_hwc.tcl  mdma_axilite_hlx_x180.tcl  mm2im_hlx.tcl  sdma_axilite_hlx_250.tcl  sdma_axilite_hlx_kria.tcl  templated_FCGEMM.tcl
hardware_automation/hlx_templater/: helper.sh  hlx_script_templater.ipynb  readme.md  tcl_templater.json
scripts/: create_symlink.sh  generate_task_scripts.py  secda_results_fig.ipynb  setup.sh  update_config.py
scripts/collectPrepareUploadRun/: collectBinaries.sh  collectPrepareUploadRun.sh  prepareFilesForFPGA.sh  readMe.md  runFilesInFPGABoard.sh  uploadFilesToFPGABoard.sh
scripts/delegate_generation/: delegate_generator.ipynb  readme.md
scripts/experiment_prep/: compile.ipynb
secda_tflite/: README.md
secda_tflite/axi_support/: axi_api_sysc_v2.cc  axi_api_v2.cc  axi_api_v2.h
secda_tflite/sysc_integrator/: axi4mm_engine.sc.h  axi4s_engine.sc.h
secda_tflite/sysc_profiler/: profiler.cc  profiler.h
secda_tflite/threading_utils/: acc_helpers.h  multi_threading.h  utils.h
secda_tflite_accelerator/: README.md
secda_tflite_accelerator/FC-GEMM/: acc.cc  acc.h  compute.h  fetch.h  load.h  scheduler.h  store.h
secda_tflite_delegates/: README.md
secda_tflite_delegates/sa_sim_delegate/: sa_sim_delegate.cc
secda_tflite_delegates/secda_vm_delegate/: secda_vm_delegate.cc
secda_tflite_delegates/vm_sim_delegate/: util.h  vm_sim_delegate.cc
src/benchmark_suite/: readme.md  secda_benchmarking_suite.ipynb
src/secda_apps/eval_model/: BUILD  (+4 more)
src/secda_apps_evaluation_suite/: secda_apps_evaluation_suite.sh
src/secda_benchmark_suite/: readme.md  secda_benchmark_suite.sh
src/secda_delegate_generator/: generate_delegate.py  readme.md
src/secda_generator/: generate_delegate.py  readme.md
src/secda_profilier/: analyse_profile.ipynb  analyse_profile_mm2im _clean.ipynb  analyse_profile_vm.ipynb  csv_compare.ipynb  hardware_profile_analysis.ipynb  hardware_profile_visualiser.ipynb  interactive_bar_chart.ipynb  profile_analysis.ipynb  readme.md  sim_profiler.ipynb  simulation_profile_analysis.ipynb  simulation_profile_visualiser.ipynb
src/secda_tflite/: BUILD  CMakeLists.txt
src/utils/: secda_hw_utils.sc.h  sysc_types.h
tutorial/: README.md
tutorial/1_delegate_generation/: README.md
tutorial/3_secda_tflite_profilier/: README.md
tutorial/6_full_design_process/: README.md
tutorials/2_delegate_simulation/: README.md
tutorials/4_hardware_automation/: README.md
tutorials/5_benchmarking_suite/: README.md
(+1135 files in other folders)
