

if(BUILD_ARM)
    use_cross_compiler()
    include_directories(${acc_testing_SOURCE_DIR}/secda_tflite/)
    add_executable(AddDriverPYNQ add_driver.cc)
    target_link_libraries(AddDriverPYNQ PUBLIC api_v2)
    target_compile_options(AddDriverPYNQ PUBLIC ${ARM_FLAGS})
    install(TARGETS AddDriverPYNQ DESTINATION ${CMAKE_SOURCE_DIR}/out/bin)
    message("Install AddDriverPYNQ to ${CMAKE_SOURCE_DIR}/out/bin")
else()
    use_host_compiler()
    include_directories(${acc_testing_SOURCE_DIR}/secda_tflite/)
    include_directories(${acc_testing_SOURCE_DIR}/toy_add/)
    add_executable(AddDriver add_driver.cc)
    target_compile_options(AddDriver PUBLIC -fPIC -DSYSC)
    target_link_libraries(AddDriver PUBLIC ToyAdd)
    install(TARGETS AddDriver DESTINATION ${CMAKE_SOURCE_DIR}/out/bin)
endif()
